--- a/2-sentiment-analysis.Rmd
+++ b/2-sentiment-analysis.Rmd
@@ -1,16 +1,142 @@
----
-title: "R Notebook"
+get_sen
+title: "Sentiment Analysis"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
+Sentiment data
 
 ```{r}
-plot(cars)
+library(tidytext)
+str(sentiments)
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+```{r}
+summary(sentiments)
+```
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+The sentiments data consists of lexicons from three sources:
+
+- [NRC Word-Emotion Association Lexicon](http://saifmohammad.com/WebPages/NRC-Emotion-Lexicon.htm)
+- [Bing](https://www.cs.uic.edu/~liub/FBS/sentiment-analysis.html)
+- [AFINN](http://www2.imm.dtu.dk/pubdb/views/publication_details.php?id=6010)
+
+```{r}
+get_sentiments('nrc')
+```
+
+
+```{r}
+get_sentiments('bing')
+```
+
+```{r}
+get_sentiments('afinn')
+```
+
+
+Each sentiment lexicon can be used in a different manner.
+
+**Shakespeare's work:**
+- Comedy: Much Ado About Nothing (Gutenberg's ID: 1519)
+- Tragedy: Romeo and Juliet (Gutenberg's ID: 1112)
+
+```{r}
+library(gutenbergr)
+library(dplyr)
+
+comedy <- gutenberg_download(1519)
+tragedy <- gutenberg_download(1112)
+
+tidy_comedy <- comedy %>%
+  unnest_tokens(sentence, text, token = 'sentences') %>%
+  mutate(line_number = row_number()) %>%
+  unnest_tokens(word, sentence) %>%
+  anti_join(stop_words) %>%
+  mutate(title = 'Much Ado About Nothing')
+
+tidy_tragedy <- tragedy %>%
+  unnest_tokens(sentence, text, token = 'sentences') %>%
+  mutate(line_number = row_number()) %>%
+  unnest_tokens(word, sentence) %>%
+  anti_join(stop_words) %>%
+  mutate(title = 'Romeo and Juliet')
+
+tidy_shakespeare <- rbind (tidy_comedy, tidy_tragedy)
+```
+
+**"Small sections of text may not have enough words to get a good estimate of sentiment while really 
+large sections can wash out narrative structure (balancing out sentiments)"**
+
+
+
+```{r}
+shakespeare_sentiment_bing <- tidy_shakespeare %>%
+  inner_join(get_sentiments('bing')) %>%
+  count(title, index = line_number %/% 80, sentiment) %>%
+  spread(sentiment, n, fill = 0) %>%
+  mutate(sentiment = positive - negative)
+```
+
+
+```{r}
+library(ggplot2)
+
+ggplot(shakespeare_sentiment_bing, aes(index, sentiment, fill = title)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~title, ncol = 2, scales = "free_x")
+```
+
+
+
+** Challenge **
+
+Select a 1-star review from `df_emerils` and identify its sentiment using the `bing` sentiment data. 
+
+```{r}
+
+```
+
+Select a 5-star review from `df_emerils` and identify its sentiment using the `bing` sentiment data. 
+
+```{r}
+
+```
+
+Using the `nrc` sentiment data, we have another perspective in analyzing sentiments
+
+```{r}
+shakespeare_sentiment_nrc <- tidy_shakespeare %>%
+  inner_join(get_sentiments('nrc')) %>%
+  count(title, index = line_number %/% 80, sentiment)
+```
+
+```{r}
+library(ggplot2)
+
+ggplot(shakespeare_sentiment_nrc, aes(index, n)) +
+  geom_col(show.legend = TRUE) +
+  geom_smooth() + 
+  facet_grid(title ~ sentiment)
+```
+
+
+
+** Challenge (15 minutes) **
+
+Aggregate all reviews into corresponding star-ratings (1 through 5). Study the 10 NRC sentiments for each rating scale. 
+
+```{r}
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
